# shorts-for-sorts

./: .editorconfig  .gitattributes  .gitignore  README.md  cli.py  convert_to_md.py  download_videos.py  downscale_videos.sh  generate_urls.py  generator.py  list_vctk_speakers.py  list_voices.py  opencode.json  pyproject.toml  requirements.txt  run-gui.bat  run-gui.sh  run.bat  run.sh  test_api.py  test_cors.py  test_youtube_dl.py  tui.py  videos_to_download.json
.agents/: AGENTS.md
.opencode/plans/: batch-memory-freeing.md  merge-llm-calls.md
cache/: subs_f2c8a0dd-a84a-43dd-9581-a0118ac969f7.ass
cli/: __init__.py  batch.py  compiler.py  config.py  main.py  menus.py  state.py  utils.py
config/: emojis.json  presets.json  prompts.json  settings.json.template
generator/: __init__.py  subtitles.py  tts.py  utils.py  video.py
gui/: __init__.py  batch.py  batch_engine.py  builtin_presets.py  compiler.py  config.py  emoji_downloader.py  emoji_map.py  emoji_renderer.py  emoji_sprite.py  globals.py  llm_utils.py  media.py  models.py  preview.py  progress_utils.py  prompts.py  server.py  settings_manager.py  state.py  tiktok_uploader.py  utils.py  video_compiler.py  ws_manager.py
gui/frontend/: index.html  package-lock.json  package.json  (+2 more)
scripts/: convert_to_md.py  download_50_videos.py  download_videos.py  generate_urls.py  list_vctk_speakers.py  list_voices.py  run-gui.bat  run-gui.sh
tests/: __init__.py  test_batch.py  test_emoji.py  test_llm_utils.py  test_models.py  test_progress_utils.py  test_routers.py  test_subtitles.py  test_ws_manager.py
(+105 files in other folders)
