[project]
name = "shorts-for-sorts"
version = "0.1.0"
description = "AI-powered short-form video generator"
requires-python = ">=3.10"
dependencies = [
    "soundfile",
    "yt-dlp",
    "openai",
    "ffmpeg-python",
    "faster-whisper",
    "fastapi",
    "uvicorn[standard]",
    "python-multipart",
    "psutil",
    "nltk",
    "sentry-sdk",
    "questionary",
    "kokoro-onnx",
    "numpy<2.0.0",
    "playwright",
]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort (import sorting)
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "SIM108", # use ternary operator (sometimes hurts readability)
]

[tool.ruff.lint.isort]
known-first-party = ["gui", "generator"]

[tool.ruff.lint.per-file-ignores]
"gui/server.py" = ["E402", "B904"]
"gui/config.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
